bpo-33954: Fix _PyUnicode_InsertThousandsGrouping()

Fix str.format(), float.__format__() and complex.__format__() methods
for non-ASCII decimal point when using the "n" formatter.

Changes:

* Rewrite _PyUnicode_InsertThousandsGrouping(): it now requires
  a _PyUnicodeWriter object for the buffer and a Python str
  for digits.
* FILL() macro now also checks "0 <= start".